# eos-hack-extension

./: .gitignore  NEWS  README.md  extension.js  meson.build  messages.pot  metadata.json.in  run-lint.sh  service.js  stylesheet.scss  utils.js
.tx/: config
autostart/: com.hack_computer.Clubhouse-flatpak-permissions.desktop
data/dbus-interfaces/: com.hack_computer.Clubhouse.xml  com.hack_computer.hack.xml
debian/: changelog  control  copyright  files
locale/: LINGUAS  POTFILES.in  ar.po  es.po  fr.po  hi.po  pt_BR.po  sw.po  zh_TW.po
locale/de/LC_MESSAGES/: de.po  eos-hack-extension.mo
migration/: com.endlessm.hack-extension.gschema.xml  gschemas.compiled  org.gnome.shell.gschema.xml
misc/: soundServer.js
schemas/: com.endlessm.hack-extension.gschema.xml  org.endlessos.hack-extension.gschema.xml
src/: hackfx-code-view-effect.c  hackfx-code-view-effect.h  meson.build
ui/: appDisplay.js  clubhouse.js  codeView.js  indicator.js  soundable.js  wobbly.js  wobblyFx.js
